--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Personal Website</title>
+    <title>Farhad Website</title>
 </head>
 <body>
-    <h1> HELLO,I'M <br> FARHAD AHMED </h1>
+       <div class="header">
+         <li>Contact</li>
+         <li>Portfolio</li>
+         <li>Work</li>
+         <li>About</li>
+       </div>
+    <section>  
+       <div class ="half-width"> 
+            
+         <h1> <span class="heade-highlight">HELLO,I'M </span><br> <span class="name-highlight">FARHAD AHMED</span> </h1>
+         <p> A Full Stack WedDeveloper .</p>
+        <a target ="_blank" class="link-btn" href="https://www.linkedin.com/in/-274566199/" >Hire Me</a>
+      </div>
+      <div class ="half-width">
+         <img src="img/images/pic1.png">
+      </div>
+    </section>
+    <section>
+      <div class ="half-width">
+        <img src="img/images/do not use this pic2.png">
+     </div>
+     <div class ="half-width"> 
+            
+      <h2> <span class="heade-highlight">ABOUT</span></h2>
+       <p> I'm Farhad Ahmed . I'm a citizen of Bangladesh. </p>
+     <a target ="_blank" class="link-btn" href="https://www.linkedin.com/in/-274566199/" >Download CV</a>
+   </div>
+    </section>
 </body>
 </html>
