--- a/index.html
+++ b/index.html
@@ -35,5 +35,23 @@
      <a target ="_blank" class="link-btn" href="https://www.linkedin.com/in/-274566199/" >Download CV</a>
    </div>
     </section>
+    <section>
+      <div>
+        <div class ="work-header">
+          <h2><span class="work-highlight">LATEST </span> WORKING PROJECT</h2>
+        </div>
+         <div class="work-card">
+           <img src="img/images/image 4.png" >
+           <h3>Power-x-gym(gym Website)</h3>
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, reprehenderit!</p>
+         </div >
+         <div class="work-card">
+           <img src="img/images/image 5.png">
+         </div>
+         <div class="work-card">
+           <img src="img/images/image 8.png">
+         </div>
+      </div>
+    </section>
 </body>
 </html>
